--- a/pagamentos/src/main/resources/application.properties
+++ b/pagamentos/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url= jdbc:postgresql://localhost:5432/ms-pagamento
+spring.datasource.username=postgres
+spring.datasource.password=lucarauj
+spring.jpa.hibernate.ddl-auto=update
