--- a/pagamentos/src/main/resources/application.properties
+++ b/pagamentos/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url= jdbc:postgresql://localhost:5432/ms-pagamento
 spring.datasource.username=postgres
 spring.datasource.password=lucarauj
 spring.jpa.hibernate.ddl-auto=update
+
+server.port=0
+spring.application.name=pagamentos-ms
+eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
+
