Update configuracao dos application.properties e dependencias

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=8082
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
+eureka.instance.hostname=localhost
 spring.application.name=gateway
 
-spring.cloud.gateway.discovery.locator.enable=true
+spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
+
