--- a/pagamentos/src/main/resources/application.properties
+++ b/pagamentos/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=0
 spring.application.name=pagamentos-ms
 eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
+eureka.instance.hostname=localhost
+eureka.instance.instance-id=${spring.application.name}:${random.int}
 
