--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=0
 spring.application.name=pedidos-ms
 eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
+eureka.instance.hostname=localhost
+eureka.instance.instance-id=${spring.application.name}:${random.int}
