Add comunicacao sincrona com Circuit breaker e fallback

--- a/pagamentos/src/main/resources/application.properties
+++ b/pagamentos/src/main/resources/application.properties
@@ -9,3 +9,7 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8081/eureka
 eureka.instance.hostname=localhost
 eureka.instance.instance-id=${spring.application.name}:${random.int}
 
+resilience4j.circuitbreaker.instances.atualizaPedido.slidingWindowSize: 3
+resilience4j.circuitbreaker.instances.atualizaPedido.minimumNumberOfCalls: 2
+resilience4j.circuitbreaker.instances.atualizaPedido.waitDurationInOpenState: 50s
+
